--- a/asp-game-store.csproj
+++ b/asp-game-store.csproj
@@ -7,4 +7,8 @@
     <RootNamespace>asp_game_store</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="DTOs\" />
+  </ItemGroup>
+
 </Project>
